--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "babel-preset-stage-0": "6.24.1",
     "babel-runtime": "6.23.0",
     "compression-webpack-plugin": "0.3.2",
+    "connect-mongo": "^1.3.2",
     "css-loader": "0.26.4",
     "eslint": "3.19.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-react": "6.10.3",
+    "express-session": "^1.15.3",
     "morgan": "^1.8.2",
     "postcss-loader": "1.3.3",
     "precss": "1.4.0",
@@ -55,7 +57,6 @@
     "mongoose": "4.9.5",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.4.0",
     "prop-types": "15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "0.30.9",
