--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "blog",
   "version": "0.0.1",
   "description": "blog",
-  "engines": {
-    "npm": ">=3"
-  },
   "scripts": {
     "start-dev": "NODE_ENV=development NODE_MODE=full nodemon backend/index.js --ignore 'frontend/*.js' --exec babel-node --presets es2015,stage-2",
-    "build": "webpack --progress --colors --display-error-details --config webpack.config.dev.js"
+    "build": "webpack --progress --colors --display-error-details --config webpack.dev.js"
   },
   "dependencies": {
     "autoprefixer": "6.7.7",
